Refactored fixing time ticks overflow.

--- a/less/tauCharts.less
+++ b/less/tauCharts.less
@@ -64,7 +64,7 @@
         }
     }
 
-    &__d3-time-overflown {
+    &__time-axis-overflow {
         .tick:nth-child(even) {
             display: none;
         }
